<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:onClick="onUpdateClick"
        android:text="@string/main_updateMeasurement" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:onClick="onSettingsClick"
        android:text="@string/main_settings"
        />
        <!--  android:visibility="gone" /> -->

    <Button
        android:id="@+id/btn_myMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:onClick="onMyMeasurementClick"
        android:text="@string/main_myMeasurement"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_init_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:onClick="onInitSetupClick"
        android:text="@string/main_init_setup"
         />

</RelativeLayout>