<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statusLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_numText"
                android:textSize="@dimen/statusTextSize" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <ListView
            android:id="@+id/in"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="0.69"
            android:paddingBottom="70dp"
            android:paddingTop="20dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_normalSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onNormalSms"
            android:text="@string/btn_send_sms" />

        <Button
            android:id="@+id/btn_encodedSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendSecureSMS"
            android:text="@string/btn_send_secure_sms" />

    </LinearLayout>

</RelativeLayout>